# lifehacks.metaclasses

./: README.md  explanation.ipynb  pyproject.toml
.github/workflows/: publish.yml  test.yml
lifehacks-stubs/metaclasses/: __init__.pyi  exceptions.pyi
lifehacks/extendable/: __init__.py  __main__.py  decoratable.py  enum.py  exceptions.py  meta.py
lifehacks/extendable/enum/: __init__.py  exceptions.py  metaclass.py
lifehacks/metaclasses/: __init__.py  __init__.pyi  __main__.py  enum.py  enum.pyi  meta.py  meta.pyi  metaclassdecorator.py  metadeco.py  metadeco.pyi
tests/: test_enum.py  test_meta.py
tests/test_meta/: test_meta.py
